auskunft_client: close client socket connection

--- a/lab1/auskunft_client.ipynb
+++ b/lab1/auskunft_client.ipynb
@@ -10,7 +10,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-01 18:47:06,875 - vs2lab.a1_layers.clientserver.Client - INFO - Client connected to socket <socket.socket fd=83, family=2, type=1, proto=0, laddr=('127.0.0.1', 45686), raddr=('127.0.0.1', 50007)>\n"
+      "2025-11-01 19:14:21,779 - vs2lab.a1_layers.clientserver.Client - INFO - Client connected to socket <socket.socket fd=82, family=2, type=1, proto=0, laddr=('127.0.0.1', 48426), raddr=('127.0.0.1', 4444)>\n",
+      "2025-11-01 19:14:21,782 - vs2lab.a1_layers.clientserver.Client - INFO - Client sending GET request for name: Anna Mueller\n",
+      "2025-11-01 19:14:21,783 - vs2lab.a1_layers.clientserver.Client - INFO - Client sent GET request for name: Anna Mueller\n",
+      "2025-11-01 19:14:21,788 - vs2lab.a1_layers.clientserver.Client - INFO - Client received data: b'+49 151 2345678'\n",
+      "2025-11-01 19:14:21,790 - vs2lab.a1_layers.clientserver.Client - INFO - Client sending GETALL request\n",
+      "2025-11-01 19:14:21,792 - vs2lab.a1_layers.clientserver.Client - INFO - Client sent GETALL request\n",
+      "2025-11-01 19:14:21,794 - vs2lab.a1_layers.clientserver.Client - INFO - Client received data: b'Anna Mueller:+49 151 2345678\\nBen Schneider:+49 176 9876543\\nClara Fischer:+49 160 3456789\\nDavid Weber:+49 157 5678901\\nElla Hoffmann:+49 152 6789012\\nFelix Wagner:+49 171 7890123\\nGreta Becker:+49 173 8901234\\nHannes Schaefer:+49 175 9012345\\nIsabel Koch:+49 178 1234567\\nJonas Bauer:+49 179 2345678\\nKlara Richter:+49 170 3456789\\nLeon Vogel:+49 162 4567890\\nMarie Winkler:+49 163 5678901\\nNico Peters:+49 174 6789012\\nOlivia Klein:+49 155 7890123\\nPaul Neumann:+49 177 8901234\\nRosa Lehmann:+49 159 9012345\\nSophia Keller:+49 172 1234567\\nTim Braun:+49 158 2345678\\nViktor Schroeder:+49 156 3456789'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Phone number for Anna Mueller: +49 151 2345678\n",
+      "Complete phone book:\n",
+      "Anna Mueller:+49 151 2345678\n",
+      "Ben Schneider:+49 176 9876543\n",
+      "Clara Fischer:+49 160 3456789\n",
+      "David Weber:+49 157 5678901\n",
+      "Ella Hoffmann:+49 152 6789012\n",
+      "Felix Wagner:+49 171 7890123\n",
+      "Greta Becker:+49 173 8901234\n",
+      "Hannes Schaefer:+49 175 9012345\n",
+      "Isabel Koch:+49 178 1234567\n",
+      "Jonas Bauer:+49 179 2345678\n",
+      "Klara Richter:+49 170 3456789\n",
+      "Leon Vogel:+49 162 4567890\n",
+      "Marie Winkler:+49 163 5678901\n",
+      "Nico Peters:+49 174 6789012\n",
+      "Olivia Klein:+49 155 7890123\n",
+      "Paul Neumann:+49 177 8901234\n",
+      "Rosa Lehmann:+49 159 9012345\n",
+      "Sophia Keller:+49 172 1234567\n",
+      "Tim Braun:+49 158 2345678\n",
+      "Viktor Schroeder:+49 156 3456789\n"
      ]
     }
    ],
@@ -23,7 +57,8 @@
     "\n",
     "phone_book = cl.get_all()\n",
     "print(\"Complete phone book:\")\n",
-    "print(phone_book)"
+    "print(phone_book)\n",
+    "cl.close()"
    ]
   }
  ],
