--- a/lab1/Client.ipynb
+++ b/lab1/Client.ipynb
@@ -64,7 +64,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "vs2lab-uWc7IIUF",
    "language": "python",
    "name": "python3"
   },
@@ -78,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
