--- a/lab1/Server.ipynb
+++ b/lab1/Server.ipynb
@@ -46,7 +46,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "vs2lab-uWc7IIUF",
    "language": "python",
    "name": "python3"
   },
@@ -60,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
